# serializer version: 1
# name: test_groups_join_query_filtering
  tuple(
    '''
      
                      LEFT JOIN (
                          SELECT
                              group_key,
                              argMax(group_properties, _timestamp) AS group_properties_0
                          FROM groups
                          WHERE team_id = %(team_id)s AND group_type_index = %(group_index_0)s
                          GROUP BY group_key
                      ) groups_0
                      ON "$group_0" == groups_0.group_key
                      
    ''',
    dict({
      'group_index_0': 0,
      'team_id': 2,
    }),
  )
# ---
# name: test_groups_join_query_filtering_with_custom_key_names
  tuple(
    '''
      
                      LEFT JOIN (
                          SELECT
                              group_key,
                              argMax(group_properties, _timestamp) AS group_properties_0
                          FROM groups
                          WHERE team_id = %(team_id)s AND group_type_index = %(group_index_0)s
                          GROUP BY group_key
                      ) groups_0
                      ON call_me_industry == groups_0.group_key
                      
      
                      LEFT JOIN (
                          SELECT
                              group_key,
                              argMax(group_properties, _timestamp) AS group_properties_2
                          FROM groups
                          WHERE team_id = %(team_id)s AND group_type_index = %(group_index_2)s
                          GROUP BY group_key
                      ) groups_2
                      ON call_me_industry == groups_2.group_key
                      
    ''',
    dict({
      'group_index_0': 0,
      'group_index_2': 2,
      'team_id': 2,
    }),
  )
# ---
